# NasaSpaceApp-ProtocoloJAP

./: .env  .gitignore  ACTUALIZACION_TEMPLATE_DINAMICO.md  LICENSE  QUICK_START.md  README.md  RESUMEN_FRONTEND_DINAMICO.md  SOLUCION_CORS_Y_MOCK.md  docker-compose.yml  example.env  pyproject.toml
Front/: API_MAPPING.md  README.md  about.html  example-api-response.json  example-weekly-response.json  index.html  test-api.html  test-system.html  today.html  week.html
Front/css/: reset.css  responsive.css  style.css  variables.css
Front/js/: common.js  config.js  fetch_definitivo.js  main.js  map.js  today.js  utils.js  week.js
Front/pages/: about.html  today.html  week.html
api/: README.md  main.py  pyproject.toml
api/db/: base.py  create_db.py  crud.py  init_db.sql  models.py  test_connection.py
api/models/: cache.py  forecast.py
api/routes/: forecast.py
api/services/: cache_service.py  forecast.py  indices.py  nasa_power.py
api/utils/: config.py
raincheck-api/: main.py  models.py  pyproject.toml  routes.py
raincheck-api/services/: forecast.py
