[project]
name = "raincheck-api"
version = "0.1.0"
description = "FastAPI service to forecast rain probability using short-term forecasts and historical climate data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydap>=3.5.8",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    "xarray>=2025.9.1",
]
