[project]
name = "raincheck-api"
version = "0.1.0"
description = "FastAPI service to forecast rain probability using short-term forecasts and historical climate data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "uvicorn>=0.37.0",
]
